--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -155,9 +155,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="order">
-                    <button>Commander</button>
-                </div>
+                    <button class="order">Commander</button>
+                
             </div>
         </div>
     </div>
