--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -165,9 +165,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="order">
-                    <button>Commander</button>
-                </div>
+
+                    <button class="order">Commander</button>
+               
             </div>
         </div>
     </div>
