--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -154,9 +154,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="order">
-                    <button>Commander</button>
-                </div>
+                
+                    <button class="order">Commander</button>
             </div>
         </div>
     </div>
